# vanna-ai-demo

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sh  main.py  pyproject.toml
vanna_demo/: config.py  my_vanna.py  train.py
